--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-csso": "^3.0.1",
-    "gulp-htmlnano": "^0.1.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
