--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-remove-empty-lines": "^0.1.0",
     "gulp-rename": "^1.3.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "postcss-uncss": "^0.16.1",
+    "uncss": "^0.16.2"
   }
 }
