--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-remove-empty-lines": "^0.1.0",
     "gulp-rename": "^1.3.0",
+    "gulp-svgo": "^1.5.4",
     "gulp-uglify": "^3.0.0",
     "postcss-uncss": "^0.16.1",
     "uncss": "^0.16.2"
